--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/16x16.png" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/favicons/57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/favicons/60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/favicons/72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/favicons/76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/favicons/114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/favicons/120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/favicons/144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/favicons/152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicons/180x180.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicons/57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicons/60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicons/72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicons/76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicons/114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicons/120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicons/144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicons/152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/180x180.png" />
 
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicons/192x192.png" />
 
