--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Kasjan Hinc | Software Developer</title>
-    <meta name="description" content="Personal website" />
+    <meta
+      name="description"
+      content="Front-end developer from Poland. Specialising in building modern, pixel-perfect applications."
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta name="msapplication-TileColor" content="#000000" />
@@ -35,7 +38,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.kasjanhinc.com/" />
     <meta property="og:site_name" content="KH" />
-    <meta property="og:description" content="Personal website" />
+    <meta
+      property="og:description"
+      content="Front-end developer from Poland. Specialising in building modern, pixel-perfect applications."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
