--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Kasjan Hinc | Software Developer</title>
+    <title>Kasjan Hinc | Frontend Developer</title>
     <meta
       name="description"
       content="Front-end developer from Poland. Specialising in building modern, pixel-perfect applications."
@@ -14,27 +14,16 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="msapplication-TileImage" href="%PUBLIC_URL%/favicons/144x144.png" />
+    <meta name="msapplication-TileImage" href="%PUBLIC_URL%/favicons/mstile.png" />
 
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicons/92x92.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/16x16.png" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/favicons/57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/favicons/60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/favicons/72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/favicons/76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/favicons/114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/favicons/120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/favicons/144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicons/152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/180x180.png" />
-
-    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicons/192x192.png" />
+    <link rel="apple-touch-icon" href="/favicons/apple-touch-icon.png" />
 
     <!-- Facebook -->
-    <meta property="og:title" content="Kasjan Hinc | Software Developer" />
+    <meta property="og:title" content="Kasjan Hinc | Frontend Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.kasjanhinc.com/" />
     <meta property="og:site_name" content="KH" />
